fix: drop inv. and exp. after final death